[package]
name = "hello_evergreen"
version = "0.1.0"
authors = []

[dependencies]
getopts = "0.2"
libc = "0.2.34"
num = "*"
num-traits = "*"
num-derive = "*"
nix = "0.24"

[dependencies.image]
version = "0.18"
features = ["png_codec"]

[dependencies.xcb]
version = "0.8.1"
features = ["dri3"]

[dependencies.wayland-client]
version = "0.12.4"
default-features = false # opt out of wayland-egl dependency
features = ["cursor"]
# path = "../wayland-client-rs/wayland-client/"

[dependencies.wayland-protocols]
version = "0.12.4"
features = ["unstable_protocols", "client"]
# path = "../wayland-client-rs/wayland-protocols/"
